--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/MaxHolzmann/workout-tracker#readme",
   "dependencies": {
     "apollo-server-express": "^3.12.0",
+    "concurrently": "^8.0.1",
     "express": "^4.18.2",
     "graphql": "^16.6.0",
     "mongodb": "^5.2.0",
